tests/dataset/tpc-ds/compiler/cpp/q79.error
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:86:12: error: ‘ss’ was not declared in this scope
   86 |   decltype(ss.ss_ticket_number) ticket;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:86:12: error: ‘ss’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:87:12: error: ‘ss’ was not declared in this scope
   87 |   decltype(ss.ss_customer_sk) customer_sk;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:87:12: error: ‘ss’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:88:12: error: ‘s’ was not declared in this scope
   88 |   decltype(s.s_city) city;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:88:12: error: ‘s’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:91:12: error: ‘ss’ was not declared in this scope
   91 |   decltype(ss) ss;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:91:12: error: ‘ss’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:92:12: error: ‘d’ was not declared in this scope
   92 |   decltype(d) d;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:92:12: error: ‘d’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:93:12: error: ‘s’ was not declared in this scope
   93 |   decltype(s) s;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:93:12: error: ‘s’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:94:12: error: ‘hd’ was not declared in this scope; did you mean ‘d’?
   94 |   decltype(hd) hd;
      |            ^~
      |            d
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:94:12: error: ‘hd’ was not declared in this scope; did you mean ‘d’?
   94 |   decltype(hd) hd;
      |            ^~
      |            d
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:106:12: error: ‘c’ was not declared in this scope
  106 |   decltype(c.c_last_name) c_last_name;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:106:12: error: ‘c’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:107:12: error: ‘c’ was not declared in this scope
  107 |   decltype(c.c_first_name) c_first_name;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:107:12: error: ‘c’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:108:38: error: ‘struct __struct7’ has no member named ‘key’
  108 |   decltype(std::declval<__struct7>().key.city) s_city;
      |                                      ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:108:38: error: ‘struct __struct7’ has no member named ‘key’
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:109:38: error: ‘struct __struct7’ has no member named ‘key’
  109 |   decltype(std::declval<__struct7>().key.ticket) ss_ticket_number;
      |                                      ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:109:38: error: ‘struct __struct7’ has no member named ‘key’
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:110:38: error: ‘struct __struct7’ has no member named ‘amt’
  110 |   decltype(std::declval<__struct7>().amt) amt;
      |                                      ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:110:38: error: ‘struct __struct7’ has no member named ‘amt’
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:111:38: error: ‘struct __struct7’ has no member named ‘profit’
  111 |   decltype(std::declval<__struct7>().profit) profit;
      |                                      ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:111:38: error: ‘struct __struct7’ has no member named ‘profit’
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:360:72: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘int’ in initialization
  360 |             auto __key = Agg{ss.ss_ticket_number, ss.ss_customer_sk, s.s_city};
      |                                                                      ~~^~~~~~
      |                                                                        |
      |                                                                        std::string {aka std::__cxx11::basic_string<char>}
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:364:47: error: cannot convert ‘StoreSale’ to ‘int’ in initialization
  364 |                 __g.items.push_back(__struct7{ss, d, s, hd});
      |                                               ^~
      |                                               |
      |                                               StoreSale
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:371:59: error: cannot convert ‘StoreSale’ to ‘int’ in initialization
  371 |                   __key, std::vector<__struct7>{__struct7{ss, d, s, hd}}});
      |                                                           ^~
      |                                                           |
      |                                                           StoreSale
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:371:72: error: no matching function for call to ‘std::vector<__struct7>::vector(<brace-enclosed initializer list>)’
  371 |                   __key, std::vector<__struct7>{__struct7{ss, d, s, hd}}});
      |                                                                        ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:9:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct7; _Alloc = std::allocator<__struct7>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; allocator_type = std::allocator<__struct7>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; std::__type_identity_t<_Alloc> = std::allocator<__struct7>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; allocator_type = std::allocator<__struct7>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; allocator_type = std::allocator<__struct7>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; std::__type_identity_t<_Alloc> = std::allocator<__struct7>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; size_type = long unsigned int; value_type = std::vector<__struct7>::value_type; allocator_type = std::allocator<__struct7>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; size_type = long unsigned int; allocator_type = std::allocator<__struct7>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct7; _Alloc = std::allocator<__struct7>; allocator_type = std::allocator<__struct7>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct7; _Alloc = std::allocator<__struct7>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:383:63: error: request for member ‘ss_coupon_amt’ in ‘std::declval<__struct7>().__struct7::ss’, which is of non-class type ‘int’
  383 |             std::vector<decltype(std::declval<__struct7>().ss.ss_coupon_amt)>
      |                                                               ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:383:63: error: request for member ‘ss_coupon_amt’ in ‘std::declval<__struct7>().__struct7::ss’, which is of non-class type ‘int’
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:383:77: error: template argument 1 is invalid
  383 |             std::vector<decltype(std::declval<__struct7>().ss.ss_coupon_amt)>
      |                                                                             ^
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:383:77: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:386:23: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  386 |               __items.push_back(x.ss.ss_coupon_amt);
      |                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:386:38: error: request for member ‘ss_coupon_amt’ in ‘x.__struct7::ss’, which is of non-class type ‘int’
  386 |               __items.push_back(x.ss.ss_coupon_amt);
      |                                      ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:382:13:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:381:38: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  381 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                    ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:381:49: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  381 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                               ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:393:63: error: request for member ‘ss_net_profit’ in ‘std::declval<__struct7>().__struct7::ss’, which is of non-class type ‘int’
  393 |             std::vector<decltype(std::declval<__struct7>().ss.ss_net_profit)>
      |                                                               ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:393:63: error: request for member ‘ss_net_profit’ in ‘std::declval<__struct7>().__struct7::ss’, which is of non-class type ‘int’
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:393:77: error: template argument 1 is invalid
  393 |             std::vector<decltype(std::declval<__struct7>().ss.ss_net_profit)>
      |                                                                             ^
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:393:77: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:396:23: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  396 |               __items.push_back(x.ss.ss_net_profit);
      |                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:396:38: error: request for member ‘ss_net_profit’ in ‘x.__struct7::ss’, which is of non-class type ‘int’
  396 |               __items.push_back(x.ss.ss_net_profit);
      |                                      ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:2)> [with auto:2 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:392:13:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:391:38: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  391 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                    ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:391:49: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  391 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                               ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:402:5: error: conversion from ‘vector<__struct9>’ to non-scalar type ‘vector<__struct7>’ requested
  341 |   std::vector<__struct7> agg = ([&]() {
      |                                ~~~~~~~~
  342 |     std::vector<__struct8> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  343 |     for (auto ss : store_sales) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  344 |       for (auto d : date_dim) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~
  345 |         if (!((d.d_date_sk == ss.ss_sold_date_sk)))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  346 |           continue;
      |           ~~~~~~~~~
  347 |         for (auto s : store) {
      |         ~~~~~~~~~~~~~~~~~~~~~~
  348 |           if (!((s.s_store_sk == ss.ss_store_sk)))
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  349 |             continue;
      |             ~~~~~~~~~
  350 |           for (auto hd : household_demographics) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  351 |             if (!((hd.hd_demo_sk == ss.ss_hdemo_sk)))
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  352 |               continue;
      |               ~~~~~~~~~
  353 |             if (!((((((((hd.hd_dep_count == 2) || (hd.hd_vehicle_count > 1))) &&
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  354 |                       (d.d_dow == 1)) &&
      |                       ~~~~~~~~~~~~~~~~~~
  355 |                      ((((d.d_year == 1998) || (d.d_year == 1999)) ||
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  356 |                        (d.d_year == 2000)))) &&
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~
  357 |                     (s.s_number_employees >= 200)) &&
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  358 |                    (s.s_number_employees <= 295))))
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  359 |               continue;
      |               ~~~~~~~~~
  360 |             auto __key = Agg{ss.ss_ticket_number, ss.ss_customer_sk, s.s_city};
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  361 |             bool __found = false;
      |             ~~~~~~~~~~~~~~~~~~~~~
  362 |             for (auto &__g : __groups) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  363 |               if (__g.key == __key) {
      |               ~~~~~~~~~~~~~~~~~~~~~~~
  364 |                 __g.items.push_back(__struct7{ss, d, s, hd});
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  365 |                 __found = true;
      |                 ~~~~~~~~~~~~~~~
  366 |                 break;
      |                 ~~~~~~
  367 |               }
      |               ~
  368 |             }
      |             ~
  369 |             if (!__found) {
      |             ~~~~~~~~~~~~~~~
  370 |               __groups.push_back(__struct8{
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  371 |                   __key, std::vector<__struct7>{__struct7{ss, d, s, hd}}});
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  372 |             }
      |             ~
  373 |           }
      |           ~
  374 |         }
      |         ~
  375 |       }
      |       ~
  376 |     }
      |     ~
  377 |     std::vector<__struct9> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  378 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  379 |       __items.push_back(__struct9{
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  380 |           g.key, ([&](auto v) {
      |           ~~~~~~~~~~~~~~~~~~~~~
  381 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  382 |           })(([&]() {
      |           ~~~~~~~~~~~
  383 |             std::vector<decltype(std::declval<__struct7>().ss.ss_coupon_amt)>
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  384 |                 __items;
      |                 ~~~~~~~~
  385 |             for (auto x : g.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~
  386 |               __items.push_back(x.ss.ss_coupon_amt);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  387 |             }
      |             ~
  388 |             return __items;
      |             ~~~~~~~~~~~~~~~
  389 |           })()),
      |           ~~~~~~
  390 |           ([&](auto v) {
      |           ~~~~~~~~~~~~~~
  391 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  392 |           })(([&]() {
      |           ~~~~~~~~~~~
  393 |             std::vector<decltype(std::declval<__struct7>().ss.ss_net_profit)>
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  394 |                 __items;
      |                 ~~~~~~~~
  395 |             for (auto x : g.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~
  396 |               __items.push_back(x.ss.ss_net_profit);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  397 |             }
      |             ~
  398 |             return __items;
      |             ~~~~~~~~~~~~~~~
  399 |           })())});
      |           ~~~~~~~~
  400 |     }
      |     ~
  401 |     return __items;
      |     ~~~~~~~~~~~~~~~
  402 |   })();
      |   ~~^~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:404:62: error: ‘struct __struct7’ has no member named ‘key’
  404 |     std::vector<std::pair<decltype(std::declval<__struct7>().key), Result>>
      |                                                              ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:404:62: error: ‘struct __struct7’ has no member named ‘key’
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:404:68: error: template argument 1 is invalid
  404 |     std::vector<std::pair<decltype(std::declval<__struct7>().key), Result>>
      |                                                                    ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:404:74: error: template argument 1 is invalid
  404 |     std::vector<std::pair<decltype(std::declval<__struct7>().key), Result>>
      |                                                                          ^~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:404:74: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:408:37: error: ‘struct __struct7’ has no member named ‘key’
  408 |         if (!((c.c_customer_sk == a.key.customer_sk)))
      |                                     ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:410:17: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  410 |         __items.push_back(
      |                 ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:412:53: error: ‘struct __struct7’ has no member named ‘key’
  412 |                                                   a.key.city, a.profit},
      |                                                     ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:412:65: error: ‘struct __struct7’ has no member named ‘profit’
  412 |                                                   a.key.city, a.profit},
      |                                                                 ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:412:71: error: no matching function for call to ‘std::vector<std::__cxx11::basic_string<char> >::vector(<brace-enclosed initializer list>)’
  412 |                                                   a.key.city, a.profit},
      |                                                                       ^
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >; allocator_type = std::allocator<std::__cxx11::basic_string<char> >]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   candidate expects 2 arguments, 4 provided
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >; std::__type_identity_t<_Alloc> = std::allocator<std::__cxx11::basic_string<char> >]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 4 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >; allocator_type = std::allocator<std::__cxx11::basic_string<char> >; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 4 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >; allocator_type = std::allocator<std::__cxx11::basic_string<char> >; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 4 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >; std::__type_identity_t<_Alloc> = std::allocator<std::__cxx11::basic_string<char> >]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 4 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   candidate expects 1 argument, 4 provided
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   candidate expects 1 argument, 4 provided
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >; size_type = long unsigned int; value_type = std::__cxx11::basic_string<char>; allocator_type = std::allocator<std::__cxx11::basic_string<char> >]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 4 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >; size_type = long unsigned int; allocator_type = std::allocator<std::__cxx11::basic_string<char> >]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   candidate expects 2 arguments, 4 provided
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >; allocator_type = std::allocator<std::__cxx11::basic_string<char> >]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   candidate expects 1 argument, 4 provided
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 4 provided
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:413:54: error: ‘struct __struct7’ has no member named ‘key’
  413 |              Result{c.c_last_name, c.c_first_name, a.key.city, a.key.ticket,
      |                                                      ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:413:66: error: ‘struct __struct7’ has no member named ‘key’
  413 |              Result{c.c_last_name, c.c_first_name, a.key.city, a.key.ticket,
      |                                                                  ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:414:23: error: ‘struct __struct7’ has no member named ‘amt’
  414 |                     a.amt, a.profit}});
      |                       ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:414:30: error: ‘struct __struct7’ has no member named ‘profit’
  414 |                     a.amt, a.profit}});
      |                              ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:417:23: error: request for member ‘begin’ in ‘__items’, which is of non-class type ‘int’
  417 |     std::sort(__items.begin(), __items.end(),
      |                       ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:417:40: error: request for member ‘end’ in ‘__items’, which is of non-class type ‘int’
  417 |     std::sort(__items.begin(), __items.end(),
      |                                        ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:420:20: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  420 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:3:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq791900115007/001/prog.cpp:420:20: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  420 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
